# SCOPE-DEL

./: README.md  pyproject.toml
notebooks/: Analysis_results.ipynb
results/: del_chembl301_cpd.csv  fin_df_intra.csv
results/dels_100/: euclidean_mfp_chembl301.csv  euclidean_mfp_resp_chembl301.csv  tanimoto_mfp_chembl301.csv  tanimoto_mfp_resp_chembl301.csv
src/scope_del/: metrics.py  plots.py
