[project]
name = "similibria"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alexey Orlov", email = "data2scale@gmail.com"},
]

dependencies = [
    "jupyterlab>=4.3.0",
    "scikit-learn>=1.5.2",
    "hdbscan>=0.8.39",
    "matplotlib>=3.9.2",
    "ipywidgets>=8.1.5",
    "pandas>=2.2.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "optuna>=4.1.0",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
    "pandarallel>=1.6.5",
    "rdkit>=2024.3.6",
    "jupyter>=1.1.1",
    "altair>=5.5.0",
    "plotly>=5.24.1",
    "nvidia-cuda-runtime-cu12>=12.4.127",
    "nvidia-cudnn-cu12>=9.1.0.70",
    "polars>=1.18.0",
    "pyarrow>=18.1.0",
    "line-profiler>=4.2.0",
    "numba>=0.61.2",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "anywidget>=0.9.18",
    "docx>=0.2.4",
    "python-docx>=1.2.0",
]

requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]
dev = [
    "pytest>=8.4.1",
    "pre-commit>=4.2.0",
]
